[tool.poetry]
name = "pycounts_vural"
version = "0.1.0"
description = "Calculate word counts in a text file"
authors = ["Vural Aktas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
matplotlib = ">=3.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "myst-nb (>=1.4.0,<2.0.0)",
    "sphinx-autoapi (>=3.8.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]
